# FHDL

./: FDHL.md  codex_20260402_165117_audit_report.md  codex_20260402_174300_final_audit_report.md  update_meta.py
v0.1/: FDHL.md  main.py  pyproject.toml
v0.1/demo_project_cli/: config.fhproj  main.fhd
v0.1/docs/: AUDIT_REPORT_V1.5.md  AUDIT_REPORT_V10.0.md  AUDIT_REPORT_V11.0.md  AUDIT_REPORT_V12.0.md  AUDIT_REPORT_V13.0.md  AUDIT_REPORT_V14.0.md  AUDIT_REPORT_V15.0.md  AUDIT_REPORT_V16.0.md  AUDIT_REPORT_V17.0.md  AUDIT_REPORT_V2.0.md  AUDIT_REPORT_V3.0.md  AUDIT_REPORT_V4.0.md  AUDIT_REPORT_V5.0.md  AUDIT_REPORT_V6.0.md  AUDIT_REPORT_V7.0.md  AUDIT_REPORT_V8.0.md  AUDIT_REPORT_V9.0.md  CHANGELOG_AI.md  INTERFACES.md  MASTER_RELEASE_V1.5.md  OPEN_QUESTIONS.md  PROJECT_OVERVIEW.md  STATE_MACHINE.md  USER_MANUAL_V1.5.md
v0.1/tests/: altitude_audit_fix.py  cavitation_audit_fix.py  check_valve_audit.py  check_valve_final_fix.py  debug_solver.py  density_audit_fix.py  e2e_cli.py  e2e_demo.py  final_audit_fix_1.py  final_audit_fix_2.py  graph_sync_audit_fix.py  id_audit_fix.py  imperial_audit_fix.py  imperial_roundtrip_audit.py  line_audit_fix.py  logic_audit.py  material_audit_fix.py  mesh_audit_fix.py  multi_fluid_audit_fix.py  multi_source_audit_fix.py  npshr_audit_fix.py  parallel_audit_fix.py  parser_audit_fix_1.py  parser_audit_fix_2.py  parser_fix_audit.py  polish_audit_fix.py  precision_audit_fix.py  pump_audit_fix.py  reducer_audit_fix.py  solver_fix_audit.py  split_audit_fix.py  stability_audit_fix.py  stability_audit_fix_2.py  terminal_physics_audit.py  (+9 more)
(+83 files in other folders)
