[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fluid-hdl"
version = "0.1.0"
description = "A text-based fluid hardware description and verification system"
authors = [
    { name = "Nizard", email = "sw_park1011@gmail.com" }
]
readme = "FDHL.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "networkx>=3.0",
    "wntr>=1.1.0",
    "scipy>=1.7.0",
    "PySide6>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/Nizard/FHDL"
